--- a/app/src/main/res/layout/coupon_item_add.xml
+++ b/app/src/main/res/layout/coupon_item_add.xml
@@ -22,7 +22,7 @@
         android:layout_alignParentRight="true"
         android:layout_gravity="center_vertical"
         android:background="@drawable/rounded_corner_green"
-        android:text="@string/add"
+        android:text="@string/add_coupon"
         android:textSize="@dimen/fontsize_16sp"
         android:textColor="@color/staples_white"
         android:paddingTop="4dp"
