--- a/app/src/main/res/layout/rewards_list.xml
+++ b/app/src/main/res/layout/rewards_list.xml
@@ -9,12 +9,7 @@
         android:scrollbars="vertical"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:paddingTop="@dimen/verticalspacing_8dp"
-        android:paddingBottom="@dimen/verticalspacing_8dp"
-        android:paddingLeft="@dimen/margin_16dp"
-        android:paddingRight="@dimen/margin_16dp"
-        android:background="@color/staples_white"/>
+        android:layout_weight="1"/>
 
     <TextView
         android:id="@+id/no_rewards_msg"
