--- a/app/src/main/res/layout/cart_fragment.xml
+++ b/app/src/main/res/layout/cart_fragment.xml
@@ -193,8 +193,7 @@
 			android:text="@string/oversized_shipping_fee"
             android:textColor="@color/staples_black"
             android:textSize="@dimen/fontsize_14sp"
-			android:visibility="gone"
-        />
+			android:visibility="gone"/>
         <TextView
 			android:id="@+id/oversized_shipping"
             android:layout_alignBaseline="@id/oversized_shipping_label"
@@ -203,9 +202,7 @@
             android:layout_width="wrap_content"
             android:textColor="@color/staples_black"
             android:textSize="@dimen/fontsize_14sp"
-			android:visibility="gone"
-		/>
-
+			android:visibility="gone"/>
 		<TextView
 			android:id="@+id/cart_shipping_label"
 			android:layout_alignParentLeft="true"
@@ -215,9 +212,7 @@
 			android:paddingTop="@dimen/margin_16dp"
 			android:text="@string/shipping"
 			android:textColor="@color/staples_black"
-			android:textSize="@dimen/fontsize_14sp"
-		/>
-
+			android:textSize="@dimen/fontsize_14sp"/>
 		<TextView
 			android:id="@+id/cart_shipping"
 			android:layout_alignBaseline="@id/cart_shipping_label"
@@ -225,8 +220,7 @@
 			android:layout_height="wrap_content"
 			android:layout_width="wrap_content"
 			android:textColor="@color/staples_black"
-			android:textSize="@dimen/fontsize_14sp"
-		/>
+			android:textSize="@dimen/fontsize_14sp"/>
 
         <TextView
             android:id="@+id/cart_subtotal_label"
@@ -250,35 +244,32 @@
 
     </RelativeLayout>
 
-    <!--pre-tax subtotal and checkout button -->
-    <RelativeLayout
-        android:id="@+id/cart_subtotal_layout"
-		android:background="@color/staples_white"
+    <LinearLayout
+        android:id="@+id/cart_action_layout"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:layout_below="@id/cart_subtotal"
-		android:padding="@dimen/margin_16dp">
-
-        <!--checkout button-->
-        <android.support.v7.widget.CardView
+        android:orientation="horizontal"
+		android:padding="@dimen/margin_16dp"
+        android:background="@color/staples_white">
+        <Button
             android:id="@+id/action_checkout"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/verticalspacing_48dp"
-            card_view:cardCornerRadius="8dp"
-            card_view:cardElevation="0dp"
-            card_view:cardBackgroundColor="@color/staples_red" >
-
-            <TextView
-                android:id="@+id/action_checkout_text"
-                android:layout_height="match_parent"
-                android:layout_width="match_parent"
-                android:gravity="center"
-                android:text="@string/proceed_to_checkout"
-                android:textSize="@dimen/fontsize_18sp"
-                android:textColor="@color/staples_white"/>
-
-        </android.support.v7.widget.CardView>
-
-    </RelativeLayout>
-
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@drawable/rounded_corner_red"
+            android:text="@string/proceed_to_checkout"
+            android:textSize="@dimen/fontsize_18sp"
+            android:textColor="@color/staples_white"/>
+        <Button
+            android:id="@+id/action_android_pay"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:layout_marginLeft="@dimen/margin_16dp"
+            android:background="@drawable/rounded_corner_red"
+            android:text="@string/pay_with_android"
+            android:textSize="@dimen/fontsize_18sp"
+            android:textColor="@color/staples_white"
+            android:visibility="gone"/><!-- TODO Here is where you enable Android Pay -->
+    </LinearLayout>
 </app.staples.mobile.cfa.widget.AnimatorLayout>
