--- a/app/src/main/res/layout/coupon_item_redeemable.xml
+++ b/app/src/main/res/layout/coupon_item_redeemable.xml
@@ -5,24 +5,28 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/coupon_amount"
-        android:paddingTop="@dimen/verticalspacing_24dp"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_marginLeft="@dimen/verticalspacing_16dp"
-        android:textSize="@dimen/fontsize_16sp"
-        android:textColor="@color/staples_black"/>
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/coupon_amount"
+            android:paddingTop="@dimen/verticalspacing_24dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/verticalspacing_16dp"
+            android:layout_marginRight="@dimen/verticalspacing_16dp"
+            android:textSize="@dimen/fontsize_16sp"
+            android:textColor="@color/staples_black"/>
+        <TextView
+            android:id="@+id/coupon_expire"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/verticalspacing_16dp"
+            android:textSize="@dimen/fontsize_16sp"
+            android:textColor="@color/staples_black"/>
+    </LinearLayout>
 
-    <TextView
-        android:id="@+id/coupon_expire"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_marginLeft="@dimen/verticalspacing_16dp"
-        android:textSize="@dimen/fontsize_16sp"
-        android:textColor="@color/staples_black"/>
 
     <LinearLayout
         android:layout_height="wrap_content"
