--- a/app/src/main/res/layout/coupon_item_redeemable_cart.xml
+++ b/app/src/main/res/layout/coupon_item_redeemable_cart.xml
@@ -1,32 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/coupon_addition_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="0dp">
-    <app.staples.mobile.cfa.widget.DualHintEdit
-        android:id="@+id/coupon_code"
-        style="@style/InputField"
+    android:paddingTop="@dimen/margin_16dp"
+    android:paddingBottom="@dimen/margin_16dp">
+    <TextView
+        android:id="@+id/coupon_amount"
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_centerInParent="true"
-        android:hint="@string/coupon_code_hint"
-        android:inputType="number"
-        android:imeOptions="actionDone"
         android:textSize="@dimen/fontsize_16sp"
-        android:maxLength="16"/>
+        android:textColor="@color/staples_black"/>
+    <TextView
+        android:id="@+id/coupon_expire"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@+id/coupon_amount"
+        android:layout_centerInParent="true"
+        android:layout_marginLeft="@dimen/verticalspacing_16dp"
+        android:textSize="@dimen/fontsize_16sp"
+        android:textColor="@color/staples_black"/>
     <Button
         android:id="@+id/coupon_add_button"
         android:layout_width="70dp"
         android:layout_height="36dp"
         android:layout_alignParentRight="true"
-        android:layout_centerInParent="true"
         android:background="@drawable/rounded_corner_green"
         android:text="@string/add_coupon"
         android:textSize="@dimen/fontsize_18sp"
-        android:textColor="@color/staples_white"
-        android:paddingTop="4dp"
-        android:paddingBottom="4dp"
-        android:paddingLeft="8dp"
-        android:paddingRight="8dp"/>
+        android:textColor="@color/staples_white"/>
 </RelativeLayout>
+
