--- a/app/src/main/res/layout/address_block.xml
+++ b/app/src/main/res/layout/address_block.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <app.staples.mobile.cfa.widget.AddressBlock xmlns:android="http://schemas.android.com/apk/res/android"
+                                            xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
 	android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -30,7 +31,9 @@
             android:layout_width="0dp"
             android:layout_weight="1"
             android:inputType="textPostalAddress"
-            android:hint="@string/address_label"/>
+            android:hint="@string/address_label"
+            app:searchTypes="address"
+            app:manualPrompt="@string/input_manually_allcaps"/>
         <app.staples.mobile.cfa.widget.DualHintEdit
             android:id="@+id/apartment"
             style="@style/InputField"
