--- a/app/src/main/res/layout/store_fragment_nomap.xml
+++ b/app/src/main/res/layout/store_fragment_nomap.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <app.staples.mobile.cfa.widget.AnimatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                              xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -10,7 +11,7 @@
         android:paddingRight="8dp"
         android:paddingBottom="8dp"
         android:background="@color/staples_red">
-        <EditText
+        <app.staples.mobile.cfa.widget.PlaceFieldView
             android:id="@+id/store_search"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -19,7 +20,9 @@
             android:background="@color/staples_white"
             android:inputType="textPostalAddress"
             android:imeOptions="actionSearch"
-            android:singleLine="true"/>
+            android:singleLine="true"
+            app:searchTypes="(regions)"
+            app:manualPrompt="@string/input_manually_allcaps"/>
         <ImageView
             android:id="@+id/store_here"
             android:layout_width="wrap_content"
