--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -18,6 +18,10 @@
         <attr name="stripeThickness" format="dimension"/>
         <attr name="android:textSize"/>
     </declare-styleable>
+    <declare-styleable name="PlacesFieldView">
+        <attr name="searchTypes" format="string"/>
+        <attr name="manualPrompt" format="string"/>
+    </declare-styleable>
     <declare-styleable name="PriceSticker">
         <attr name="majorTextSize" format="dimension"/>
         <attr name="minorTextSize" format="dimension"/>
