--- a/app/src/main/res/layout/store_fragment_map.xml
+++ b/app/src/main/res/layout/store_fragment_map.xml
@@ -6,10 +6,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="8dp"
-        android:paddingRight="8dp"
-        android:paddingBottom="8dp"
-        android:background="@color/staples_red">
+        android:padding="@dimen/margin_16dp">
         <EditText
             android:id="@+id/store_search"
             android:layout_width="match_parent"
